--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 --- # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
 # Site settings
-name: gabriel gordon-hall
+name: Gabriel Gordon-Hall
 email:
 description: > # this means to ignore newlines until "url:"
   Gabriel Gordon-Hall's homepage
